fix problem with buttons on mobile

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -13,7 +13,6 @@
         right: 0;
         top: 100px;
         height: 800px;
-        width: 100%;
         background: #06292a;
         transform: skew(0, -6deg);
     }
